# team-manager

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/data/: people.json  projects.json  roles.json  skills.json  teams.json
backend/example/: phased_allocation_handover_api.ipynb
backend/src/api/: main.py
backend/src/api/core/: config.py
backend/src/api/models/: assignment.py  date_range.py  person.py  project.py  role.py  skill.py  team.py
backend/src/api/repositories/: file_repository.py
backend/src/api/v1/: assignments.py  optimization.py  people.py  projects.py  roles.py  router.py  skills.py  teams.py
backend/tests/: test_assignments.py  test_people_availability.py
frontend/: Dockerfile  README.md  biome.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
infra/: README.md  docker-compose.dev.yml  docker-compose.yml
optimizer/: README.md  pyproject.toml
optimizer/example/: phased_allocation_handover.ipynb  simple_allocation.ipynb
optimizer/src/optimizer/: __init__.py  availability.py  constraints.py  models.py  objectives.py  solver.py
optimizer/src/optimizer/adapters/: pulp_solver.py
optimizer/src/optimizer/domain/: solver.py
optimizer/src/optimizer/models/: __init__.py  assignment.py  date_range.py  person.py  project.py  seniority.py  skill.py  squad.py
optimizer/tests/: test_availability.py  test_pulp_solver.py  test_solver.py
scripts/: test-e2e.sh
(+31 files in other folders)
