[project]
name = "team-manager-api"
version = "0.1.0"
description = "FastAPI application layer for the team manager"
requires-python = ">=3.12"
dependencies = [
    "team-manager-optimizer",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "ipykernel>=7.3.0",
    "requests>=2.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv.sources]
team-manager-optimizer = { workspace = true }

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
