[project]
name = "team-manager-optimizer"
version = "0.1.0"
description = "Operations Research engine for team assignment — framework-agnostic"
requires-python = ">=3.12"
dependencies = [
    "pulp>=2.9.0",
    "pydantic>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "ipykernel>=7.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/optimizer"]

[tool.ruff]
line-length = 120
